exports[`test should call styles passing the theme as arg if it is a function 1`] = `
<div
  class="blue_532ba">
  Blue content with gray background
</div>
`;

exports[`test should work as a wrapping function 1`] = `
<div
  class="blue_532ba">
  Blue Content
</div>
`;

exports[`test should wrap a component and inject styles prop 1`] = `
<div
  class="blue_532ba">
  Blue Content
</div>
`;
